Update api to work with TestNet

--- a/css/main.css
+++ b/css/main.css
@@ -92,21 +92,14 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+div {
+    text-align: center;
+    margin-top: 100px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ul {
+    list-style: none;
+}
 
 /* ==========================================================================
    Helper classes
